--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = mvn-japicmp-gradle-plugin
 url = https://github.com/melix/japicmp-gradle-plugin/archive/RELEASE_0_2_4.tar.gz
-archives = https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.4/japicmp-gradle-plugin-0.2.4.jar : https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.4/japicmp-gradle-plugin-0.2.4.pom :
+archives = https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.4/japicmp-gradle-plugin-0.2.4.jar : https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.4/japicmp-gradle-plugin-0.2.4.pom : https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.7/japicmp-gradle-plugin-0.2.7.jar : https://plugins.gradle.org/m2/me/champeau/gradle/japicmp-gradle-plugin/0.2.7/japicmp-gradle-plugin-0.2.7.pom :
 giturl = https://github.com/melix/japicmp-gradle-plugin.git
 
 [autospec]
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
